--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -17,6 +17,7 @@
     "@my/ui": "0.0.1",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.5",
     "app": "0.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "burnt": "^0.12.2",
