--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,6 +15,7 @@
     "@tamagui/lucide-icons": "^1.135.4",
     "@tamagui/shorthands": "^1.135.4",
     "@tamagui/themes": "^1.135.4",
+    "@tanstack/react-query": "^5.90.5",
     "burnt": "^0.12.2",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.4",
