--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,6 +15,7 @@
     "@babel/runtime": "^7.26.0",
     "@expo/config-plugins": "~10.0.0",
     "@my/ui": "0.0.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.5",
